Fixed some images, grid needs tweaking so the text doesnt overflows to the video thumbnail

--- a/styles.css
+++ b/styles.css
@@ -178,8 +178,6 @@ aside button i {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
-    align-content: center;
     margin-top: 52px;
 }
 
@@ -188,7 +186,7 @@ aside button i {
     margin: 10px 7.5px 30px 7.5px;
     display: grid;
     grid-template-columns: 20% 80%;
-    grid-template-rows: auto auto;
+    grid-template-rows: 65% 35%;
     transition-duration: 500ms;
     transition-delay: 300ms;
 }
@@ -202,6 +200,7 @@ aside button i {
     grid-row: 1 / 2;
     object-fit: contain;
     width: 100%;
+    height: 164px;
     margin-bottom: 10px;
 }
 
